examples/pass/WxmWxl-Wxl.stl
/** WWelim **/
global x; 
local l,m; 

/** Optimised **/ 
write(x,l); 

/** Unoptimised **/ 
write(x,m); 
write(x,l); 
