examples/fail/RNyRNx-RNxRNy.stl
/** reordRR **/
global x,y; 
local l,m; 

/** Optimised **/ 
readN(x); 
readN(y); 

/** Unoptimised **/ 
readN(y); 
readN(x); 
